--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK 17
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
@@ -22,16 +22,19 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build release app with Gradle
-      run: ./gradlew assembleRelease; tree .
-    
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2.2.4
+    - name: Build release app
+      run: |
+          ./gradlew assembleRelease
+          # jarsigner -verbose -keystore ~/.config/.android/debug.keystore -storepass android -keypass android app/build/outputs/apk/release/app-release-unsigned.apk androiddebugkey
+          apksigner sign --ks ~/.config/.android/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android app/build/outputs/apk/release/app-release-unsigned.apk
+          mv app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/app-release.apk
+    - name: Sort files
+      run: |
+          mkdir output
+          mv app/build/outputs/apk/release/app-release.apk output
+    - name: Upload release
+      uses: actions/upload-artifact@v3
       with:
-        # Artifact name
-        name: 
-          app.apk
-        # A file, directory or wildcard pattern that describes what to upload
-        path: 
-          ./app/build/outputs/apk/release/app-release.apk
+        name: app-release.zip
+        path: output/app-release.*
         if-no-files-found: error
