--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
-
+    - name: Install dependencies
+      run: sudo apt-get install apksigner
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build release app
