--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,12 +10,12 @@ on:
 jobs:
   build:
 
-    runs-on: codeberg-tiny
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -35,7 +35,7 @@ jobs:
           mkdir output
           mv app/build/outputs/apk/release/app-release*.apk output
     - name: Upload release
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
         name: release.zip
         path: output/app-release*.*
