Обновить .github/workflows/android.yml

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,7 @@ jobs:
         distribution: 'temurin'
         cache: gradle
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install apksigner
+      run: sudo apt-get update && sudo apt-get install -y apksigner
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build release app
